Fix <ol> spacing

--- a/css/base/_general.scss
+++ b/css/base/_general.scss
@@ -235,7 +235,7 @@ section {
     }
   }
   ul {
-    font: $normal 1.8rem/2.8rem $regular;
+    font: $normal 1.8rem/3.4rem $regular;
     margin: 20px 0px;
     li {
       list-style: disc;
@@ -248,7 +248,7 @@ section {
     }
   }
   ol {
-    font: $normal 1.8rem/2.8rem $regular;
+    font: $normal 1.8rem/3.4rem $regular;
     margin: 20px 0px;
     li {
       list-style: decimal;
